--- a/capstone_index.html
+++ b/capstone_index.html
@@ -27,7 +27,7 @@
  <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">   
-<img src="file:///C:/Users/mkinsman/Documents/Coding_Class/images/muffin.jpg" alt="blueberry muffin" class="center w3-hover-opacity">
+<img src="/muffin.jpg" alt="blueberry muffin" class="center w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Blueberry Muffin</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
