--- a/capstone_index.html
+++ b/capstone_index.html
@@ -4,7 +4,7 @@
 <title>Recipe Library</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="../css/capstone.css">
+<link rel="stylesheet" href="https://github.com/mgennuso/mgennuso.github.io/blob/c088a7170f739d7cbd47857c7f05d7a078e98354/capstone.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
