--- a/capstone_index.html
+++ b/capstone_index.html
@@ -26,7 +26,7 @@
  <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">   
-<img src="https://github.com/mgennuso/mgennuso.github.io/blob/7395c566a741bf1de01d1d2e3c87496d5ed63f0e/blueberry-muffin.jpg" alt="blueberry muffin" class="center w3-hover-opacity">
+<img src="blueberry-muffin.jpg" alt="blueberry muffin" class="center w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Blueberry Muffin</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
