--- a/recipe.html
+++ b/recipe.html
@@ -4,7 +4,7 @@
 <title>Recipe Library</title>
 <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../css/capstone.css">
+  <link rel="stylesheet" href="capstone.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -88,11 +88,11 @@ margin-top: 75px;
 
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="file:///C:/Users/mkinsman/Documents/Coding_Class/html/capstone_index.html" class="w3-bar-item w3-button">Recipe Library</a>
+    <a href="capstone_index.html" class="w3-bar-item w3-button">Recipe Library</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="file:///C:/Users/mkinsman/Documents/Coding_Class/html/capstone_index.html" class="w3-bar-item w3-button">Home</a>
-      <a href="file:///C:/Users/mkinsman/Documents/Coding_Class/html/subscribe.html" class="w3-bar-item w3-button">Subscribe</a>
+      <a href="capstone_index.html" class="w3-bar-item w3-button">Home</a>
+      <a href="subscribe.html" class="w3-bar-item w3-button">Subscribe</a>
     </div>
   </div>
 </div>
@@ -121,15 +121,15 @@ margin-top: 75px;
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="file:///C:/Users/mkinsman/Documents/Coding_Class/images/muffin.jpg" alt="blueberry muffin">
+        <img src="muffin.jpg" alt="blueberry muffin">
       </div>
 
       <div class="item">
-        <img src="file:///C:/Users/mkinsman/Documents/Coding_Class/images/blueberry-streusel-muffins.jpg" alt="blueberry streusel muffins" >
+        <img src="blueberry-streusel-muffins.jpg" alt="blueberry streusel muffins" >
       </div>
     
       <div class="item">
-        <img src="file:///C:/Users/mkinsman/Documents/Coding_Class/images/blueberry-muffin.jpg" alt="blueberry muffins">
+        <img src="blueberry-muffin.jpg" alt="blueberry muffins">
       </div>
     </div>
 
