--- a/subscribe.html
+++ b/subscribe.html
@@ -2,7 +2,7 @@
 <html>
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="../css/capstone.css">
+<link rel="stylesheet" href="capstone.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
@@ -11,11 +11,11 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="file:///C:/Users/mkinsman/Documents/Coding_Class/html/capstone_index.html" class="w3-bar-item w3-button">Recipe Library</a>
+    <a href="capstone_index.html" class="w3-bar-item w3-button">Recipe Library</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="file:///C:/Users/mkinsman/Documents/Coding_Class/html/capstone_index.html" class="w3-bar-item w3-button">Home</a>
-      <a href="file:///C:/Users/mkinsman/Documents/Coding_Class/html/subscribe.html" class="w3-bar-item w3-button">Subscribe</a>
+      <a href="capstone_index.html" class="w3-bar-item w3-button">Home</a>
+      <a href="subscribe.html" class="w3-bar-item w3-button">Subscribe</a>
     </div>
   </div>
 </div>
