--- a/capstone_index.html
+++ b/capstone_index.html
@@ -11,18 +11,15 @@
 </head>
 
 <body>
+  <script src="../js/capstone.js"></script>
 <div id="container">
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="capstone_index.html" class="w3-bar-item w3-button">Recipe Library</a>
-    <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="capstone_index.html" class="w3-bar-item w3-button">Home</a>
-      <a href="subscribe.html" class="w3-bar-item w3-button">Subscribe</a>
+<div class="topnav" id="myTopnav">
+      <a href="file:///C:/Users/mkinsman/Documents/Coding_Class/html/capstone_index.html">Home</a>
+      <a href="file:///C:/Users/mkinsman/Documents/Coding_Class/html/subscribe.html">Subscribe</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
     </div>
-  </div>
-</div>
  <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">   
