--- a/subscribe.html
+++ b/subscribe.html
@@ -8,16 +8,12 @@
 <div id="container">
 <script src="capstone.js"></script>
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="capstone_index.html" class="w3-bar-item w3-button">Recipe Library</a>
-    <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="capstone_index.html" class="w3-bar-item w3-button">Home</a>
-      <a href="subscribe.html" class="w3-bar-item w3-button">Subscribe</a>
+<div class="topnav" id="myTopnav">
+      <a href="capstone_index.html">Home</a>
+      <a href="subscribe.html">Subscribe</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
     </div>
-  </div>
-</div>
 
 <form action="" class="form-container w3-container w3-card-4 w3-light-grey w3-text-blue">
 <h2 class="w3-center">Subscribe</h2>
