--- a/capstone_index.html
+++ b/capstone_index.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-  <script src="../js/capstone.js"></script>
+  <script src="/capstone.js"></script>
 <div id="container">
 <!-- Navbar (sit on top) -->
 <div class="topnav" id="myTopnav">
-      <a href="file:///C:/Users/mkinsman/Documents/Coding_Class/html/capstone_index.html">Home</a>
-      <a href="file:///C:/Users/mkinsman/Documents/Coding_Class/html/subscribe.html">Subscribe</a>
+      <a href="capstone_index.html">Home</a>
+      <a href="subscribe.html">Subscribe</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
     </div>
