--- a/recipe.html
+++ b/recipe.html
@@ -13,89 +13,16 @@
 </head>
 
 <body>
+  <script src="capstone.js"></script>
 <div id="container">
 <!-- Navbar (sit on top) -->
-<style>
-.w3-top, .w3-bottom {
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-}
 
-.w3-top {
-top: 0;
-}
-
-.w3-white, .w3-hover-white:hover {
-    color: #000!important;
-    background-color: #fff!important;
-}
-
-.w3-padding {
-    padding: 8px 16px!important;
-}
-
-.w3-card, .w3-card-2 {
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
-}
-
-.w3-bar {
-    width: 100%;
-    overflow: hidden;
-}
-
-.w3-row-padding {
-padding: 0 8px;
-margin-top: 75px;
-}
-
-.w3-bar .w3-button {
-    white-space: normal;
-}
-.w3-bar .w3-bar-item {
-    padding: 8px 16px;
-    float: left;
-    width: auto;
-    border: none;
-    display: block;
-    outline: 0;
-}
-
-.w3-right {
-    float: right!important;
-}
-
-.w3-btn, .w3-button {
-    border: none;
-    display: inline-block;
-    padding: 8px 16px;
-    vertical-align: middle;
-    overflow: hidden;
-    text-decoration: none;
-    color: inherit;
-    background-color: inherit;
-    text-align: center;
-    cursor: pointer;
-    white-space: nowrap;
-}
-
-.w3-button:hover {
-    color: #000!important;
-    background-color: #ccc!important;
-}
-</style>
-
-
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="capstone_index.html" class="w3-bar-item w3-button">Recipe Library</a>
-    <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="capstone_index.html" class="w3-bar-item w3-button">Home</a>
-      <a href="subscribe.html" class="w3-bar-item w3-button">Subscribe</a>
+  <div class="topnav" id="myTopnav">
+      <a href="capstone_index.html">Home</a>
+      <a href="subscribe.html">Subscribe</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
     </div>
-  </div>
-</div>
 
 <div id="copy">
 <h1 style="color:#005035; font-weight:600">Blueberry Muffin Recipe</h1>
