--- a/recipe.html
+++ b/recipe.html
@@ -14,6 +14,17 @@
 
 <body>
   <script src="capstone.js"></script>
+  <script>
+    
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+  </script>
 <div id="container">
 <!-- Navbar (sit on top) -->
 
