--- a/capstone_index.html
+++ b/capstone_index.html
@@ -3,7 +3,7 @@
 <title>Recipe Library</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/capstone.css">
+<link rel="stylesheet" href="capstone.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,13 +11,13 @@
 </head>
 
 <body>
-  <script src="/capstone.js"></script>
+  <script src="capstone.js"></script>
 <div id="container">
 <!-- Navbar (sit on top) -->
 <div class="topnav" id="myTopnav">
       <a href="capstone_index.html">Home</a>
       <a href="subscribe.html">Subscribe</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()"/>
           <i class="fa fa-bars"></i>
     </div>
  <!-- First Photo Grid-->
