--- a/capstone_index.html
+++ b/capstone_index.html
@@ -27,7 +27,7 @@
       <div class="w3-container w3-white">
         <p><b>Blueberry Muffin</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-<a href="recipe.html" class="center">View Recipe</a>
+<a href="recipe.html" class="button">View Recipe</a>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
