--- a/capstone_index.html
+++ b/capstone_index.html
@@ -17,7 +17,7 @@
 <div class="topnav" id="myTopnav">
       <a href="capstone_index.html">Home</a>
       <a href="subscribe.html">Subscribe</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()"/>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()"></a>
           <i class="fa fa-bars"></i>
     </div>
  <!-- First Photo Grid-->
