--- a/capstone_index.html
+++ b/capstone_index.html
@@ -17,8 +17,8 @@
 <div class="topnav" id="myTopnav">
       <a href="capstone_index.html">Home</a>
       <a href="subscribe.html">Subscribe</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()"></a>
-          <i class="fa fa-bars"></i>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i></a>
     </div>
  <!-- First Photo Grid-->
   <div class="w3-row-padding">
