--- a/subscribe.html
+++ b/subscribe.html
@@ -12,7 +12,7 @@
       <a href="capstone_index.html">Home</a>
       <a href="subscribe.html">Subscribe</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
+          <i class="fa fa-bars"></i></a>
     </div>
 
 <form action="" class="form-container w3-container w3-card-4 w3-light-grey w3-text-blue">
