--- a/recipe.html
+++ b/recipe.html
@@ -24,6 +24,29 @@ function myFunction() {
   }
 }
   </script>
+
+  <style>
+    @media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  </style>
 <div id="container">
 <!-- Navbar (sit on top) -->
 
