--- a/subscribe.html
+++ b/subscribe.html
@@ -7,6 +7,11 @@
 <body>
 <div id="container">
 <script src="capstone.js"></script>
+      <script>
+            function myFunction() {
+  alert("You've Subscribed to Recipe Library!");
+}
+      </script>
 <!-- Navbar (sit on top) -->
 <div class="topnav" id="myTopnav">
       <a href="capstone_index.html">Home</a>
